completed mobile view and fixed navigation expansion height, having an issue with horizontal scroll bar in mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -165,17 +165,27 @@ nav .nav-expand {
   align-items: center;
   line-height: 7.5rem;
   width: 100%;
-  height: 598px;
+  height: 760px;
 }
 nav .nav-expand img {
   position: relative;
-  left: 275px;
-  bottom: 165px;
+  margin-left: 80%;
+  bottom: 245px;
+}
+@media (max-width: 380px) {
+  nav .nav-expand img {
+    margin-left: 65%;
+  }
 }
 nav .nav-expand a {
   color: #FFFFFF;
   text-decoration: none;
   margin-right: 35%;
+}
+@media (max-width: 380px) {
+  nav .nav-expand a {
+    margin-right: 50%;
+  }
 }
 nav .nav-expand a:hover {
   cursor: pointer;
@@ -192,7 +202,7 @@ body {
   max-width: 1024px;
   margin: 0 auto;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .desktop-img {
     display: none;
   }
@@ -200,13 +210,19 @@ body {
 .mobile-img {
   display: none;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .mobile-img {
     display: flex;
+    width: 100%;
   }
 }
 .jumbotron {
   height: 598px;
+}
+@media (max-width: 380px) {
+  .jumbotron {
+    height: 260px;
+  }
 }
 .jumbotron h1 {
   position: relative;
@@ -218,6 +234,14 @@ body {
   font-weight: bold;
   font-family: Roboto, Arial, sans-serif;
 }
+@media (max-width: 380px) {
+  .jumbotron h1 {
+    font-size: 4rem;
+    line-height: 5rem;
+    left: 5%;
+    bottom: 175px;
+  }
+}
 .info {
   display: flex;
   width: 90%;
@@ -226,11 +250,12 @@ body {
   margin-bottom: 100px;
   font-family: Roboto, Arial, sans-serif;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .info {
     display: flex;
     flex-direction: column;
     width: 90%;
+    margin: 0 5%;
     margin-bottom: 30px;
   }
 }
@@ -252,7 +277,7 @@ body {
   width: 40%;
   padding-top: 30px;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .info .info-text {
     width: 100%;
     justify-content: center;
@@ -268,7 +293,7 @@ body {
   width: 110px;
   height: 30px;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .info .info-text .button {
     width: 100%;
   }
@@ -280,7 +305,7 @@ body {
   flex-direction: row-reverse;
   margin-top: 50px;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .info1 {
     display: flex;
     flex-direction: column;
@@ -294,8 +319,18 @@ body {
   font-size: 2.8rem;
   font-weight: bold;
 }
+@media (max-width: 380px) {
+  .recent-projects h3 {
+    margin: 40px 0 40px 20%;
+  }
+}
 .recent-projects .project {
   margin-bottom: 100px;
+}
+@media (max-width: 380px) {
+  .recent-projects .project {
+    margin-bottom: 50px;
+  }
 }
 .recent-projects .project h2 {
   font-size: 2rem;
@@ -309,7 +344,7 @@ body {
   align-items: center;
   letter-spacing: 8px;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .recent-projects .project h2 {
     width: 90%;
     text-align: center;
@@ -320,7 +355,7 @@ body {
   font-size: 1.6rem;
   line-height: 2.4rem;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .recent-projects p {
     margin: 20px 5%;
   }
@@ -328,7 +363,7 @@ body {
 .recent-projects img {
   margin: 0 10%;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .recent-projects img {
     margin: 0;
   }
@@ -336,7 +371,7 @@ body {
 .recent-projects .villas h2 {
   left: 73.75%;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .recent-projects .villas h2 {
     left: 0;
     margin: 0 5%;
@@ -346,7 +381,7 @@ body {
 .recent-projects .outskirts h2 {
   left: 10%;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .recent-projects .outskirts h2 {
     left: 0;
     margin: 0 5%;
@@ -356,7 +391,7 @@ body {
 .recent-projects .blocks h2 {
   left: 73.25%;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .recent-projects .blocks h2 {
     left: 0;
     margin: 0 5%;
@@ -369,12 +404,12 @@ footer {
   padding-top: 50px;
   font-family: Roboto, Arial, sans-serif;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   footer {
     padding-top: 20px;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   footer .email-input h2 {
     margin-top: 0;
   }
@@ -385,7 +420,7 @@ footer input {
   width: 90%;
   margin-top: 10px;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   footer input {
     height: 40px;
     font-size: 1.6rem;
@@ -395,7 +430,7 @@ footer h2 {
   font-size: 2rem;
   line-height: 2.4rem;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   footer h2 {
     margin-top: 20px;
   }
@@ -404,7 +439,7 @@ footer section {
   display: flex;
   justify-content: space-evenly;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   footer section {
     flex-direction: column;
     margin: 0 3%;
@@ -414,7 +449,7 @@ footer section p {
   font-size: 1.4rem;
   line-height: 2.6rem;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   footer section p {
     margin-top: 10px;
   }
@@ -425,7 +460,7 @@ footer .copyright {
   padding: 30px 0 5px 0;
   font-size: 0.9rem;
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   footer .copyright {
     justify-content: flex-start;
     margin-left: 3%;
