--- a/less/home.less
+++ b/less/home.less
@@ -20,12 +20,15 @@ html, body {
   display: none;
   @media @phone {
     display: flex;
+    width: 100%;
   }
 }
 
 .jumbotron {
-
   height: 598px;
+  @media @phone {
+    height: 260px;
+  }
 
   
   h1 {
@@ -37,6 +40,12 @@ html, body {
     font-size: 6.4rem;
     font-weight: bold;
     font-family: Roboto, Arial, sans-serif;
+    @media @phone {
+      font-size: 4.0rem;
+      line-height: 5.0rem;
+      left: 5%;
+      bottom: 175px;
+    }
   }
 }
 
@@ -51,6 +60,7 @@ html, body {
     display: flex;
     flex-direction: column;
     width: 90%;
+    margin: 0 5%;
     margin-bottom: 30px;
   }
 
@@ -108,17 +118,22 @@ html, body {
 }
 
 .recent-projects {
-
   font-family: Roboto, Arial, sans-serif;
 
   h3 {
     margin: 40px 0 40px 10%;
     font-size: 2.8rem;
     font-weight: bold;
+    @media @phone {
+      margin: 40px 0 40px 20%;
+    }
   }
 
   .project {
     margin-bottom: 100px;
+    @media @phone {
+      margin-bottom: 50px;
+    }
 
     h2 {
     font-size: 2.0rem;
