--- a/less/nav.less
+++ b/less/nav.less
@@ -32,18 +32,24 @@ nav {
     align-items: center;
     line-height: 7.5rem;
     width: 100%;
-    height: 598px;
+    height: 760px;
 
     img {
       position: relative;
-      left: 275px;
-      bottom: 165px;      
+      margin-left: 80%;
+      bottom: 245px;
+      @media @phone {
+        margin-left: 65%;
+      }      
     }
 
     a {
       color: #FFFFFF;
       text-decoration: none;
       margin-right: 35%;
+      @media @phone {
+        margin-right: 50%;
+      }
     }
 
     a:hover {
