--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,3 @@
 // Mobile
 
-@phone: ~'(max-width: 320px)';
+@phone: ~'(max-width: 380px)';
